--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
-        nav_version = '2.3.0-alpha05'
+        nav_version = '2.3.1'
         room_version = '2.2.5'
         coroutine_version ='1.3.7'
         lifecycle_version = '2.2.0'
