--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         room_version = '2.2.5'
         coroutine_version ='1.3.7'
         lifecycle_version = '2.2.0'
+        hilt_version = '2.31.2-alpha'
+        hilt_jetpack_version = '1.0.0-alpha03'
     }
     repositories {
         google()
@@ -14,11 +16,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.5'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
