--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,12 +70,13 @@ dependencies {
     //RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
-    //viewModel,liveData, fragment-ktx
+    //viewModel,liveData, fragment-ktx, activity-ktx
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation "androidx.activity:activity-ktx:1.2.1"
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
